<resources>
    <string name="app_name">chapter04</string>
    <string name="title_activity_act_request">ActRequestActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="weather_str">晴天</string>
    <string name="first_long">启停活动</string>
    <string name="first_short">first</string>
    <string name="second_long">来回跳转</string>
    <string name="second_short">second</string>
    <string name="three_long">登录返回</string>
    <string name="three_short">three</string>

</resources>