<?xml version="1.0" encoding="utf-8"?>
<shortcuts xmlns:android="http://schemas.android.com/apk/res/android">

    <shortcut
        android:enabled="true"
        android:icon="@mipmap/ic_launcher"
        android:shortcutId="first"
        android:shortcutLongLabel="@string/first_long"
        android:shortcutShortLabel="@string/first_short">
        <intent
            android:action="android.intent.action.VIEW"
            android:targetClass="com.example.chapter04.ActStartActivity"
            android:targetPackage="com.example.chapter04" />
        <categories android:name="android:shortcut.conversation" />
    </shortcut>
    <shortcut
        android:enabled="true"
        android:icon="@mipmap/ic_launcher"
        android:shortcutId="second"
        android:shortcutLongLabel="@string/second_long"
        android:shortcutShortLabel="@string/second_short">
        <intent
            android:action="android.intent.action.VIEW"
            android:targetClass="com.example.chapter04.ActRequestActivity"
            android:targetPackage="com.example.chapter04" />
        <categories android:name="android:shortcut.conversation" />
    </shortcut>

    <shortcut
        android:enabled="true"
        android:icon="@mipmap/ic_launcher"
        android:shortcutId="three"
        android:shortcutLongLabel="@string/three_long"
        android:shortcutShortLabel="@string/three_short">
        <intent
            android:action="android.intent.action.VIEW"
            android:targetClass="com.example.chapter04.MetaDataActivity"
            android:targetPackage="com.example.chapter04" />
        <categories android:name="android:shortcut.conversation" />
    </shortcut>
</shortcuts>